risc0/zirgen/dsl/test/repro/nondet_coerce.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:

component TakesNondet(reg: NondetReg) {
  reg
}

test should_fail {
  // 5 is not a register
  TakesNondet(5)
}

